Update patroni etcd haproxy

--- a/etcd/etcd.conf
+++ b/etcd/etcd.conf
@@ -1,9 +1,9 @@
 # [Member]
-ETCD_LISTEN_PEER_URLS="http://172.16.0.103:2380,http://127.0.0.1:7001"
-ETCD_LISTEN_CLIENT_URLS="http://127.0.0.1:2379, http://172.16.0.103:2379"
+ETCD_LISTEN_PEER_URLS="http://172.19.0.4:2380"
+ETCD_LISTEN_CLIENT_URLS="http://172.19.0.4:2379"
 #[Clustering]
-ETCD_INITIAL_ADVERTISE_PEER_URLS="http://172.16.0.103:2380"
-ETCD_INITIAL_CLUSTER="etcd0=http://172.16.0.103:2380,"
-ETCD_ADVERTISE_CLIENT_URLS="http://172.16.0.103:2379"
+ETCD_INITIAL_ADVERTISE_PEER_URLS="http://172.19.0.4:2380"
+ETCD_INITIAL_CLUSTER="etcd0=http://172.19.0.4:2380,"
+ETCD_ADVERTISE_CLIENT_URLS="http://172.19.0.4:2379"
 ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster-01"
 ETCD_INITIAL_CLUSTER_STATE="new"
