--- a/etcd/Dockerfile
+++ b/etcd/Dockerfile
@@ -7,7 +7,7 @@ RUN curl -sL https://github.com/coreos/etcd/releases/download/v${ETCDVERSION}/et
             | tar xz -C /bin --strip=1 --wildcards --no-anchored etcd etcdctl \
     && curl -sL https://github.com/kelseyhightower/confd/releases/download/v${CONFDVERSION}/confd-${CONFDVERSION}-linux-amd64 \
             > /bin/confd && chmod +x /bin/confd 
-
+USER postgres
 # COPY extras/confd/conf.d/haproxy.toml /etc/confd/conf.d/
 # COPY extras/confd/templates/haproxy.tmpl /etc/confd/templates/
 COPY ./run.sh /docker-entrypoint-initdb.d/run.sh
