--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -4,6 +4,7 @@ LABEL Email="vova.kadoch1995@gmail.com"
 RUN yum -y update; yum clean all
 RUN yum -y install haproxy; yum clean all
 COPY haproxy.cfg /etc/haproxy/haproxy.cfg
+RUN mkdir /run/haproxy 
 # COPY haproxy-run.sh entrypoint.sh
 # If need monitoring haproxy uncomment this
 # RUN wget http://hatop.googlecode.com/files/hatop-0.7.7.tar.gz \
