--- a/patroni/Dockerfile
+++ b/patroni/Dockerfile
@@ -7,31 +7,23 @@ RUN yum -y upgrade; yum clean all
 RUN dnf install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm
 RUN dnf -qy module disable postgresql
 RUN dnf install -y postgresql14-server
+RUN chown -R postgres.postgres /var/lib/pgsql
+RUN chmod +x /bin/postgresql-14-setup
 RUN dnf -y install python3 
 RUN pip3 install --upgrade pip
 RUN yum -y install gcc
 RUN pip3 install psycopg2-binary
 RUN pip3 install patroni[etcd]
 
-#  RUN mkdir /data/patroni -p \
-#     && chown postgres:postgres /data/patroni \
-#     && chmod 700 /data/patroni 
+ RUN mkdir /data/patroni -p \
+     && chown postgres.postgres /data/patroni \
+     && chmod 777 /data/patroni 
 
 COPY patroni.yml /etc/patroni.yml
+RUN chown -v postgres.postgres /etc/patroni.yml
 COPY patroni-run.sh ./entrypoint.sh
+RUN chown -v postgres.postgres /entrypoint.sh
+
 USER postgres
 
 ENTRYPOINT ["bin/sh", "/entrypoint.sh"]
-
-
-
-
-
-
-
-#  RUN yum -y install python-psycopg2
-#  RUN yum -y install python3-pip python3-dev libpq-dev 
-#  RUN pip install patroni[etcd]
-#  RUN mkdir -p /data/patroni
-#  RUN chown postgres:postgres /data/patroni
-#  RUN chmod 700 /data/patroni
